# SongbookTUI

./: .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: release.yml
songbooktui/: Bla.py  __init__.py  scripts.py
songbooktui/backend/: consts.py  dao.py  dto.py  exceptions.py  model.py  service.py
songbooktui/tui/: App.py  app.py  app.tcss  borked_app.py  sheet_parser.py  style.tcss  test_app.py  test_app2.py  utils.py
songbooktui/tui/screens/: loading_splash.py  loading_splash.tcss  main_menu.py
songbooktui/tui/screens/editor/: editor_screen.py  editor_screen.tcss
songbooktui/tui/screens/settings/: settings.py  settings.tcss
songbooktui/tui/screens/sheet_viewer/: sheet_viewer.py  sheet_viewer.tcss
songbooktui/tui/screens/song_overview/: song_overview_modal.py  song_overview_modal.tcss
songbooktui/tui/screens/songbook_overview/: songbook_overview_modal.py  songbook_overview_modal.tcss
songbooktui/tui/screens/songbooks/: songbooks_screen.py  songbooks_screen.tcss
songbooktui/tui/screens/songs/: songs_screen.py  songs_screen.tcss
songbooktui/tui/screens/splash/: loading_splash.py  loading_splash.tcss
songbooktui/tui/widgets/: action_button.py  bottom_bar.py  containers.py  form.py  main_menu.py  progress_bar.py  songbook_overview_table.py  text_viewer.py  toggle.py  top_bar.py  widget_factory.py
