[tool.poetry]
name = "songbooktui"
version = "0.1.0"
description = ""
authors = ["Valentin Grégoire <valentin.gregoire@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.54.0"
textual-dev = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
