[project]
name = "SongbookTUI"
description = "A TUI for Songbooks."
version = "0.1.15"
requires-python = ">=3.12"
authors = [{ name = "Valentin Grégoire" }]
maintainers = [{ name = "Valentin Grégoire" }]
readme = "README.md"

dependencies = [
  "textual>=0.54.0",
  "textual-dev>=1.5.1",
  "mypy>=1.9.0",
  "art>=6.1",
  "numba>=0.59.1",
  "httpx>=0.27.0",
  "gitpython>=3.1.43",
]

[dependency-groups]
dev = ["pytest>=8.1.1"]
lint = ["ruff>=0.4.4"]

[project.scripts]
songbook = "songbooktui.scripts:main"

[tool.pyright]
include = ["songbooktui"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
